# GUIT

./: CMakeLists.txt  Guit API.csproj  Guit.sql  Makefile  Program.cs  README.md  ServerConector.cpp  ServerConector.h  addFile.cpp  addFile.h  client.cpp  client.hpp  comandos.cpp  comandos.h  doCommit.cpp  doCommit.h  initRepo.cpp  initRepo.h  main.cpp  server.cpp  server.hpp  showHelp.cpp  showHelp.h  utils.cpp  utils.hpp
Controllers/: CommitsController.cs  FileController.cs  IgnoreFilesController.cs  RepositoryController.cs  VersionsController.cs
Data/: ApplicationDbContext.cs
Models/: Models.cs
Pages/: Error.cshtml.cs  Index.cshtml.cs  Privacy.cshtml.cs  _ViewImports.cshtml
Pages/Shared/: _Layout.cshtml
Properties/: launchSettings.json
untitled2/: CMakeLists.txt  CommandHandler.cpp  CommandHandler.h  main.cpp
